<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.tepsa</groupId>
	<artifactId>vyrbus</artifactId>
	<version>0.0.1</version>
	<properties>
		<zk.version>6.5.4</zk.version>
		<commons-io>1.3.1</commons-io>
		<springframework.version>3.1.1.RELEASE</springframework.version>
		<hibernate.version>3.6.10.Final</hibernate.version>
		<maven.build.timestamp.format>yyyy-MM-dd</maven.build.timestamp.format>
		<packname>-${project.version}-FL-${maven.build.timestamp}</packname>
	</properties>
	<packaging>war</packaging>
	<name>The vyrbus Project</name>
	<description>The vyrbus Project</description>
	<licenses>
		<license>
			<name>GNU LESSER GENERAL PUBLIC LICENSE, Version 3</name>
			<url>http://www.gnu.org/licenses/lgpl.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<repositories>
		<repository>
			<id>ZK CE</id>
			<name>ZK CE Repository</name>
			<url>http://mavensync.zkoss.org/maven2</url>
		</repository>
		<repository>
			<id>ZK EVAL</id>
      		<name>ZK Evaluation Repository</name>
			<url>http://mavensync.zkoss.org/eval</url>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>zkmaven</id>
			<name>ZK Maven Plugin Repository</name>
			<url>http://mavensync.zkoss.org/maven2/</url>
		</pluginRepository>
	</pluginRepositories>
	<dependencies>
<!--	<dependency>
			<groupId>org.zkoss.theme</groupId>
			<artifactId>sapphire</artifactId>
			<version>${zk.version}</version>
		</dependency> -->
  		<dependency>
			<groupId>org.zkoss.theme</groupId>
			<artifactId>myBlueTheme</artifactId>
			<version>6.0.0</version>
		</dependency>  
		<dependency>
			<groupId>org.zkoss.zk</groupId>
			<artifactId>zkbind</artifactId>
			<version>${zk.version}</version>
		</dependency>
		<dependency>
			<groupId>org.zkoss.zk</groupId>
			<artifactId>zul</artifactId>
			<version>${zk.version}</version>
		</dependency>
		<dependency>
			<groupId>org.zkoss.zk</groupId>
			<artifactId>zkplus</artifactId>
			<version>${zk.version}</version>
		</dependency>
		<dependency>
			<groupId>org.zkoss.zk</groupId>
			<artifactId>zhtml</artifactId>
			<version>${zk.version}</version>
		</dependency>
		
		
		
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${commons-io}</version>
		</dependency>
		
		<dependency> 
		  <groupId>org.apache.commons</groupId>
		  <artifactId>commons-io</artifactId> 
		  <version>1.3.2</version> 
		</dependency> 
		<!-- ZK 5 breeze theme
		<dependency>
			<groupId>org.zkoss.theme</groupId>
			<artifactId>breeze</artifactId>
			<version>${zk.version}</version>
			<optional>true</optional>
		</dependency>
		 -->
		 
		<!-- Spring dependency -->
		<dependency>
		    <groupId>org.springframework</groupId>
		    <artifactId>spring-core</artifactId>
		    <version>${springframework.version}</version>
		</dependency>
		<dependency>
		    <groupId>org.springframework</groupId>
		    <artifactId>spring-orm</artifactId>
		    <version>${springframework.version}</version>
		</dependency>
		<dependency>
		    <groupId>org.springframework</groupId>
		    <artifactId>spring-web</artifactId>
		    <version>${springframework.version}</version>
		</dependency>
		<!-- Hibernate dependency -->
		<dependency>
		    <groupId>org.hibernate</groupId>
		    <artifactId>hibernate-core</artifactId>
		    <version>${hibernate.version}</version>
		</dependency>
		<dependency>
		    <groupId>org.hibernate</groupId>
		    <artifactId>hibernate-entitymanager</artifactId>
		    <version>${hibernate.version}</version>
		</dependency>
		<dependency>
		    <groupId>org.hibernate</groupId>
		    <artifactId>hibernate-c3p0</artifactId>
		    <version>${hibernate.version}</version>
		</dependency>
		<!-- Otras dependencias -->
		<dependency>
	  		<groupId>log4j</groupId>
	  		<artifactId>log4j</artifactId>
	  		<version>1.2.16</version>
	  	</dependency>
	  	<dependency>
	  		<groupId>com.oracle</groupId>
	  		<artifactId>ojdbc6</artifactId>
	  		<version>11.1.0.7.0</version>
	  	</dependency>
		<!-- PostgreSQL -->
		<dependency>
		    <groupId>org.postgresql</groupId>
		    <artifactId>postgresql</artifactId>
<!-- 		    <version>42.2.18.jre7</version> -->
			<version>42.2.18</version>
		</dependency>


			  	
	  	<dependency>
	  		<groupId>org.zkforge</groupId>
	  		<artifactId>bwcaptcha</artifactId>
	  		<version>1.0</version>
	  	</dependency>
	  	<dependency>
	  		<groupId>javax.servlet</groupId>
	  		<artifactId>javax.servlet-api</artifactId>
	  		<version>3.0.1</version>
	  	</dependency>
<!-- 	  	COMENTADO 14/01/2013 -->
	  	<!-- Para el envio de mensajeria -->
<!--  	  	<dependency> -->
<!-- 			<groupId>javax.activation</groupId> -->
<!--   			<artifactId>activation</artifactId> -->
<!--   			<version>1.0.2</version> -->
<!--   		</dependency>  -->
		<dependency>
			<groupId>com.sun.mail</groupId>
			<artifactId>imap</artifactId>
			<version>1.6.2</version>
		</dependency>
		<dependency>
			<groupId>com.sun.mail</groupId>
			<artifactId>mailapi</artifactId>
			<version>1.6.2</version>
		</dependency>
		<dependency>
			<groupId>com.sun.mail</groupId>
			<artifactId>pop3</artifactId>
			<version>1.6.2</version>
		</dependency>
		<dependency>
			<groupId>com.sun.mail</groupId>
			<artifactId>smtp</artifactId>
			<version>1.6.2</version>
		</dependency>
		<dependency>
			<groupId>com.sun.mail</groupId>
			<artifactId>dsn</artifactId>
			<version>1.6.2</version>
		</dependency>
		<dependency>
			<groupId>poi</groupId>
			<artifactId>poi</artifactId>
			<version>3.1-FINAL</version>
		</dependency>
		<dependency>
			<groupId>net.sourceforge.jexcelapi</groupId>
			<artifactId>jxl</artifactId>
			<version>2.6.12</version>
		</dependency>
		<dependency>
	    	<groupId>org.jasypt</groupId>
	      	<artifactId>jasypt</artifactId>
	      	<version>1.9.1</version>
	    </dependency>
	    <dependency>
			<groupId>org.jasypt</groupId>
			<artifactId>jasypt-spring31</artifactId>
			<version>1.9.1</version>
		</dependency>
		<!-- 		PDF -->
<!-- 		<dependency> -->
<!-- 			<groupId>com.lowagie</groupId> -->
<!-- 			<artifactId>itext</artifactId> -->
<!-- 			<version>2.0.7</version> -->
<!-- 		</dependency> -->

		<!--CREAR ARCHIVO PDF -->
		<dependency>
			<groupId>com.itextpdf</groupId>
			<artifactId>itextpdf</artifactId>
			<version>5.0.6</version>
		</dependency>
		
        <dependency>
			<groupId>net.sf.jasperreports</groupId>
			<artifactId>jasperreports</artifactId>
			<version>6.19.1</version>			
		</dependency>
            
		<!-- https://mvnrepository.com/artifact/org.apache.axis2/axis2-java2wsdl -->
		<dependency>
		    <groupId>org.apache.axis2</groupId>
		    <artifactId>axis2-java2wsdl</artifactId>
		    <version>1.7.3</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.sun.xml.ws/jaxws-tools -->
		<dependency>
		    <groupId>com.sun.xml.ws</groupId>
		    <artifactId>jaxws-tools</artifactId>
		    <version>2.2.10</version>
		    <type>pom</type>
		</dependency>

		
		<!-- 	NECESARIO PARA LA IMPLEMENTACION DE LA API REST -->
		
		
		<dependency>
		    <groupId>com.mashape.unirest</groupId>
		    <artifactId>unirest-java</artifactId>
		    <version>1.4.9</version>
		</dependency>
		<dependency>
		  <groupId>org.apache.httpcomponents</groupId>
		  <artifactId>httpclient</artifactId>
		  <version>4.3.6</version>
		</dependency>
		<dependency>
		  <groupId>org.apache.httpcomponents</groupId>
		  <artifactId>httpasyncclient</artifactId>
		  <version>4.0.2</version>
		</dependency>
		<dependency>
		  <groupId>org.apache.httpcomponents</groupId>
		  <artifactId>httpmime</artifactId>
		  <version>4.3.6</version>
		</dependency>
		<dependency>
		  <groupId>org.json</groupId>
		  <artifactId>json</artifactId>
		  <version>20140107</version>
		</dependency>
<!-- 		OTRAS -REST -->
		<dependency>
		  <groupId>junit</groupId>
		  <artifactId>junit</artifactId>
		  <version>4.11</version>
		  <scope>test</scope>
		</dependency>
		<dependency>
		  <groupId>commons-io</groupId>
		  <artifactId>commons-io</artifactId>
		  <version>2.4</version>
		  <scope>test</scope>
		</dependency>


		<!-- https://mvnrepository.com/artifact/javax.xml.soap/javax.xml.soap-api -->
		
	</dependencies>
	<build>
		<finalName>${project.artifactId}</finalName>
		<plugins>
			<!-- Run with Jetty -->
			<!-- <plugin>
				<groupId>org.mortbay.jetty</groupId>
				<artifactId>maven-jetty-plugin</artifactId>
				<version>6.1.10</version>
				<configuration>
					<scanIntervalSeconds>5</scanIntervalSeconds>
					<stopKey>foo</stopKey>
					<stopPort>9999</stopPort>
				</configuration>
				<executions>
					<execution>
						<id>start-jetty</id>
						<phase>pre-integration-test</phase>
						<goals>
							<goal>run</goal>
						</goals>
						<configuration>
							<scanIntervalSeconds>0</scanIntervalSeconds>
							<daemon>true</daemon>
						</configuration>
					</execution>
					<execution>
						<id>stop-jetty</id>
						<phase>post-integration-test</phase>
						<goals>
							<goal>stop</goal>
						</goals>
					</execution>
				</executions>
			</plugin> -->
			<!-- Compile java -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<!-- Build war -->
			<plugin>
				<artifactId>maven-war-plugin</artifactId>
				<groupId>org.apache.maven.plugins</groupId>
				<version>2.1.1</version>
			</plugin>
			<!-- Pack zips -->
			<!-- <plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.2</version>
				<executions>
					<execution>
						<id>webapp</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<finalName>sisvyr${packname}</finalName>
							<appendAssemblyId>false</appendAssemblyId>
							<descriptors>
								<descriptor>assembly/webapp.xml</descriptor>
							</descriptors>
						</configuration>
					</execution>
				</executions>
			</plugin> -->
			
		</plugins>
	</build>
</project>